# playlist-summarizer

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/playlist_summarizer/: fetcher.py  main.py  summarizer.py
