[project]
name = "playlist-summarizer"
version = "0.1.0"
description = "A monorepo for YouTube playlist transcript fetching and AI-powered summarization"
readme = "README.md"
authors = [
    { name = "Anthony Kovach", email = "aj@ajxd2.dev" }
]
requires-python = ">=3.14"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.uv.workspace]
members = ["packages/*"]
